--- a/package.json
+++ b/package.json
@@ -8,9 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/cli-plugin-vuex": "^4.5.13",
+    "@vuex-orm/core": "^0.36.3",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "element-ui": "^2.4.5",
+    "moment": "^2.29.1",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^8.0.0",
+    "vue": "^2.6.12",
+    "vue-router": "^3.2.0",
+    "vuex": "^3.4.0",
+    "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -23,6 +31,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "postcss": "^7.0.35",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.2",
+    "vue-cli-plugin-element": "~1.0.1",
     "vue-template-compiler": "^2.6.11"
   }
 }
